<resources>
    <string name="app_name">优趣</string>
    <string name="banner_index">首页</string>
    <string name="banner_classify">社区</string>
    <string name="banner_shopping">购物车</string>
    <string name="banner_my">我的</string>
    <string name="lijitiyan">立即体验</string>
    <string name="index_banner1">套套天堂</string>
    <string name="index_banner2">情趣服饰</string>
    <string name="index_banner3">男用玩具</string>
    <string name="index_banner4">女用玩具</string>
    <string name="index_banner5">男女喷剂</string>
    <string name="index_banner6">润滑助兴</string>
    <string name="index_banner7">调教玩具</string>
    <string name="index_banner8">免费试用</string>
    <string name="index_banner9">撸一撸</string>
    <string name="index_banner10">分类</string>
    <string name="xianshi_tv">限时抢购</string>
    <string name="xianshiqiang_changci">13:00场</string>
    <string name="xsq_jishi_tv">00:13:12</string>
    <string name="xsq_quanbu_tv"><![CDATA[查看全部>]]></string>
    <string name="xsq_jiage_new">￥13.13</string>
    <string name="xsq_jiage_old">￥33.13</string>
    <string name="taotaotiantang_tit">套套天堂</string>
    <string name="taotaotiantang_name">/taotaotiantang</string>
    <string name="tttt_more"><![CDATA[更多>]]></string>
    <string name="tttt_item_txt">我就是产品</string>
    <string name="qqfs_tit">情趣服饰</string>
    <string name="qqfs_name">/qingqufushi</string>
    <string name="biaoti">优趣</string>
    <string name="rementuijian">------良心推荐------</string>
    <string name="tuijian">热门推荐</string>
    <string name="wode">我的</string>
    <string name="my_name">小二坏坏</string>
    <string name="my_qianming">个性签名</string>
    <string name="my_zuji">足迹</string>
    <string name="my_shoucang">收藏</string>
    <string name="my_dingdan_num">13</string>
    <string name="my_dingdan">订单</string>
    <string name="my_fayan">发言</string>
    <string name="my_guanzhu">关注</string>
    <string name="my_haoyou">好友</string>
    <string name="my_fensi">粉丝</string>
    <string name="my_qudou_txt">我的趣豆</string>
    <string name="my_qubi_txt">我的趣币</string>
    <string name="my_youhui_txt">我的优惠券</string>
    <string name="my_jiangli_txt">社区奖励</string>
    <string name="my_jinbi_txt">我的金币</string>
    <string name="my_daka_txt">打卡</string>
    <string name="my_yinsi_txt">隐私保护</string>
    <string name="my_kefu_txt">客服中心</string>
    <string name="my_qudou_num"><![CDATA[2 〉]]></string>
    <string name="classify_quanzi_title">我的圈子</string>
    <string name="classify_quanzi_title1">推荐圈子</string>
    <string name="classify_more"><![CDATA[查看更多>]]></string>
    <string name="quan_wen_content">坏坏就是大好人，不管你信不信</string>
    <string name="quan_wen_num">今日：13</string>
    <string name="quanzi_renshu">圈子人数：1313</string>
    <string name="quan_tuijian_guanzhu">关注</string>
    <string name="item_classifyhot_end">加载更多</string>
    <string name="tttt_xiang_banner_renqi">人气</string>
    <string name="tttt_xiang_banner_xinpin">新品</string>
    <string name="tttt_xiang_banner_jiage">价格</string>
    <string name="tttt_xiang_banner_xuan">筛选</string>
    <string name="renqi_item_title">我就是在测试昌平U型啊你南方比脑残剧烦人呢你才UI吃死你年出生呢测试</string>
    <string name="renqi_item_num">2625</string>
    <string name="renqi_item_xiaoliang">销量:</string>
    <string name="pop_shaixuan_fenlei">分类</string>
    <string name="ttxq_shaixuan_pinpai">品牌</string>
    <string name="shaixuan_quxiao_btn">取消</string>
    <string name="shaixuan_ok_btn">确定</string>
    <string name="xsqxiangqin_fanhui">限时秒杀</string>
    <string name="xsqxq_time_tv">01:00:00</string>
    <string name="xsqxq_changci_tv">下一场:</string>
    <string name="xsqxq_time_dazhe_tv">5折</string>
    <string name="xsqxq_time_liji">立即抢购</string>
    <string name="gouwu_quanxuan_tv">全选</string>
    <string name="gouwu_jiesuan">去结算(1)</string>
    <string name="gouwu_heji_tv">合计:</string>
    <string name="gouwu_item_guige">规格:</string>
    <string name="gouwu_guige_juti">随便啦反正在测试</string>
    <string name="gouwu_num_jian">-</string>
    <string name="gouwu_num_jia">+</string>
    <string name="gouwu_cailike"> 猜你喜欢 </string>
    <string name="end"> END </string>
    <string name="pop_shopche_guige">已选择:</string>
    <string name="pop_shopche_num">数量</string>
    <string name="pop_shopche_ok_btn">确定</string>
    <string name="my_denglu_btn">登录</string>
    <string name="my_zhuce_btn">注册</string>
</resources>
