<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/renqi_item_img"
        android:src="@mipmap/kenan"
        android:layout_width="wrap_content"
        android:layout_height="250dp" />
    <TextView
        android:id="@+id/renqi_item_title"
        android:text="@string/renqi_item_title"
        android:maxLines="2"
        android:textColor="@color/hei"
        android:textSize="20sp"
        android:scrollbars="none"
        android:singleLine="false"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp">
        <TextView
            android:id="@+id/renqi_item_jiage"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textColor="@color/renqi_item_jiage"
            android:text="@string/xsq_jiage_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/renqi_item_num"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/renqi_item_num"
            android:layout_centerVertical="true"
            android:textColor="@color/xianshiqiang_tv_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_toLeftOf="@id/renqi_item_num"
            android:layout_centerVertical="true"
            android:textColor="@color/xianshiqiang_tv_bg"
            android:text="@string/renqi_item_xiaoliang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>