<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
            <TextView
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/pop_shaixuan_fenlei"
                android:textColor="@color/hei"
                android:gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp" />
            <com.jinfukeji.taqu.utils.FlowLayout
                android:id="@+id/ttqx_xuan_fenlei"
                app:vertical_spacing="8dp"
                app:horizontal_spacing="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.jinfukeji.taqu.utils.FlowLayout>
            <TextView
                android:layout_marginTop="15dp"
                android:text="@string/ttxq_shaixuan_pinpai"
                android:textColor="@color/hei"
                android:gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="30dp" />
            <com.jinfukeji.taqu.utils.FlowLayout
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:id="@+id/ttxq_xuan_pinpai"
                app:horizontal_spacing="8dp"
                app:vertical_spacing="8dp"
                android:paddingBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.jinfukeji.taqu.utils.FlowLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/ttxq_xuan_quxiao"
            android:text="@string/shaixuan_quxiao_btn"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:background="@color/renqi_item_jiage"
            android:layout_width="0dp"
            android:layout_height="40dp" />
        <Button
            android:id="@+id/ttxq_xuan_ok"
            android:text="@string/shaixuan_ok_btn"
            android:background="@color/biaoti"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp" />
    </LinearLayout>
</RelativeLayout>